Change History
==============

1.7.17 (unreleased)
-------------------

- Fix misleading test in exportimport.
  [smcmahon]

- Change edit.gif to edit.png in quickedit.pt and fg_savedata [ableeb]

- fixed loading of widget javascripts in quickedit (#95) [reinhardt]

- left placeholder only for fields where it makes sense [montypie]

- Fixed MaxLengthValidator when string is Unicode
  [gotcha]

- Fixed loading of widget javascripts in quickedit (#95)
  [reinhardt]

- for save data adapter: handle the case in which the HTTP POST date time is added 
  after some data had already been submitted [tkimnguyen]

- If the form is displayed in embedded mode, display thank you page
  in embedded mode as well.
  [naro]


1.7.16 (2014-09-26)
-------------------

- Add support for the placeholder attribute for input fields.
  Requires Plone >= 4.2, or Archetypes >= 1.7.14.
  [thet]

- Mailer adapter looks for data grid fields that contain new File
  columns and includes those files as attachments [tkimnguyen]

- Add/fix trove classifiers.
  [smcmahon]


1.7.15 (2014-07-25)
-------------------

- Add Travis CI testing for Plone 4.2 and 4.3.
  [smcmahon]

- Tell collective.cover that we act like a folder when dropped into a list tile.
  [smcmahon]

- str() of form field value containing unicode characters causes UnicodeEncodeError.
  Updating to safe_unicode per smcmahon.
  [tsimkins]

- Update pt_BR translation
  [ericof]

- Fix column headings not being included for server-side only fields
  in saved data downloads.
  [davidjb]

- Fixed issue that raise errors if gpg module is not found.
  [keul]

1.7.14 (2014-01-26)
-------------------

- Packaging fix.


1.7.13 (2014-01-26)
-------------------

- Get TinyMCE working on rich text popup editing in quickeditor.
  [smcmahon]

- Move most text files into package root. Eliminate version.txt. The
  old locations were old Zope artifacts.
  [smcmahon]

- Fixed type definition for FieldsetStart type
  [naro]
